<resources>
    <string name="app_name" translatable="false">Oáza.tv</string>

    <string name="exception_network_timeout">connection failed</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="continue_text">Continue…</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="done">done</string>
    <string name="home">Home</string>
    <string name="archive">Archive</string>
    <string name="settings">Settings</string>
    <string name="tutorial">Tutorial</string>
    <string name="views">views</string>
    <string name="downloaded">Downloaded</string>
    <string name="cannot_play_audio_file">Can\'t play audio file</string>
    <string name="audio_focus_not_granted" translatable="false">ERROR: Audio focus not granted!</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="downloading_audio">Downloading audio</string>
    <string name="download_completed">Download completed</string>
    <string name="added_to_queue">Added to queue</string>
    <string name="photo_album">Photo album</string>
    <string name="search_hint_oaza">Gods grace, #conference, majesty...</string>
    <string name="download_audio">Download</string>
    <string name="stream_audio">Stream audio</string>
    <string name="play_downloaded_audio">Play downloaded audio</string>
    <string name="delete_downloaded_audio">Delete downloaded audio</string>
    <string name="not_enough_space_to_download">Not enought space to download</string>
    <string name="download_only_on_wifi">Download only on wifi</string>
    <string name="stream_only_on_wifi">Stream only on wifi</string>
    <string name="stream_only_audio">Stream only audio when not on wifi</string>
    <string name="cannot_play_without_wifi">Cannot play without wifi connection (check your settings)</string>
    <string name="added_to_download_queue">Added to download queue</string>
    <string name="download_canceled">Download canceled</string>
    <string name="cancel_download">Cancel download</string>
    <string name="downloading_photo">Downloading photo</string>
    <string name="permission_revoked">Permission revoked</string>
    <string name="newest_videos">Newest videos</string>
    <string name="newest_albums">Newest photo albums</string>
    <string name="popular_videos">Popular videos</string>
    <string name="offline_status_message">No internet connection!</string>
    <string name="featured">Featured</string>
    <string name="new_and_popular"><![CDATA[New & popular]]></string>
    <string name="now_on_air">now on air!</string>
    <string name="watch">Watch!</string>
    <string name="player_error" translatable="false">Error initializing YouTube player: %s</string>
    <string name="stream_has_ended">Stream has ended</string>
    <string name="live_stream_share">Oáza.tv - Livestream</string>
    <string name="share_live_stream">Share live stream</string>
    <string name="share_video">Share video</string>
    <string name="share_album">Share album</string>
    <string name="space_free">Free</string>
    <string name="space_used">Used</string>
    <string name="connection_error">Connection error</string>
    <string name="none_downloaded_hint">You didn\'t downloaded any audio files. To download and play offline tap the three dots next to the video and download there.</string>
    <string name="tutorial_text_1">Let\'s dive into this fresh &amp; new experience!</string>
    <string name="tutorial_title_2">Rejoice!</string>
    <string name="tutorial_text_2">With always new and refreshing content.</string>
    <string name="tutorial_title_3">Archive, categories, photo albums.</string>
    <string name="tutorial_text_3">Browse through huge library of preachings, conferences, teachings and more...</string>
    <string name="tutorial_title_4">Listen on the way.</string>
    <string name="tutorial_text_4">Download audio to listen wen you are on the way or offline.</string>
    <string name="are_you_shure">Are you shure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="download_pending">pending...</string>
    <string name="download_running">downloading</string>
    <string name="download_paused">paused...</string>
    <string name="not_downloaded_yet">Not downloaded yed</string>
    <string name="used_by_app">used by Oaza.tv application</string>
    <string name="other_apps">Other apps</string>
    <string name="quality_mode_not_available">High quality video is not available</string>
    <string name="low_quality_mode_not_available">Low quality video is not available</string>
    <string name="continue_watching">Continue watching...</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="audioplayer_phonestate_permission">Allow Oáza.tv app to read phone state to be able to pause audio when there\'s an incoming call.</string>
    <string name="ok">OK</string>
    <string name="permission_revoked_download_photos_and_audio">You will not be available to download photos and audio files anymore</string>
    <string name="permission_revoked_phone_state">App will no longer be able to pause playback on incoming calls!</string>
    <string name="app_is_outdated">Your app is outdated!</string>
    <string name="update_app">Update App</string>
    <string name="app_is_outdated_text">Please consider updating the app. Old versions are not supported and may not even work!</string>
    <string name="error_when_playing_video">An error occured when playing video</string>
    <string name="hide_this_video">Hide video</string>
    <string name="problem_occured_when_playing_video">An error occured when trying to play video</string>
    <string name="czech">czech</string>
    <string name="english">english</string>
    <string name="streaming">Streaming</string>
    <string name="share">Share</string>
    <string name="audio_downloaded">Audio downloaded</string>
    <string name="download">Download</string>
    <string name="sure">Sure!</string>
    <string name="later">Later</string>
    <string name="already_done">Already done</string>
    <string name="rating_request_message">Are you enjoying our app? Give us a review/rating!</string>
    <string name="title_activity_tv_main">Leanback Oáza.tv</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
